Changes for 1.8.0.3
* Fixing bugs in AI's where factories were on water zones that had no territory attachment. (veqryn)

* Fixed bug where a stalemate battle with carriers that can be damaged and when damaged don't let planes land, were not letting defending planes move to land. (veqryn)

* Deleting game option property "Unescorted Transport Dies", as it no longer does anything. (veqryn)

* Cleanup of HeadlessGameServer classes. (veqryn)

* Fixed bugs in Placement, which were allowing infinite placement of sea units which were constructions. (veqryn)

* Some updates for 'Great War' world war 1 map, and Pact of Steel 2. (veqryn)

* Possible fix for "Could not stop delegate execution" bug. (veqryn)

* Fixed possible bug where a corrupted game save had the initialization delegate get called more than once. (veqryn)

* Adding a new AI called "Hard AI". Also renamed AI's: EZ Fodder -> Easy AI, Moore N Able -> Medium AI, Dynamix -> Land Only AI. (redrum)

* Fix for infinite crash-reload loop on loading a corrupt autosave on a host bot. (veqryn)

* Fixed issue with Victory trigger not being able to use html properly. (veqryn)

* Fixed illegal state exception error in landing paratroopers during a battle. (veqryn)

* Possibly final fix for a game hang / frozen bot on game launch. (veqryn)


Changes for 1.8.0.1
* Adding new sci-fi sound for "future" era. (pulicat, cernel, veqryn)

* Allowing "NONE" as a valid option value in sounds.properties file. (veqryn)

* Fixed null pointer exception in Moore AI for water based factories. (veqryn)

* Fixed bid delegate so that it will still run even if the player has no resources other than the bid amount. (veqryn)

* Fixed possible null pointer exception in Triggered Victory which is triggered from outside of the end round delegate. (veqryn)

* Making TransportTracker a static implementation to clean up the engine a little bit. (veqryn)

* Fixing various bugs in Global 1940, ww2v3, v4, v5, and v6. (veqryn)
