@@ -27,8 +27,9 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
 /**
+ * A list of all available games. We make sure we can parse them all, but we don't keep them in memory.
  * 
- * @author veqryn
+ * @author veqryn (Mark Christopher Duncan)
  * 
  */
 public class AvailableGames
