@@ -1,4 +1,6 @@
 Changes for 1.8.0.3
+* Making createsUnitsList ability choose a random territory when producing to a neighboring territory. (veqryn)
+
 * Fixing bugs in AI's where factories were on water zones that had no territory attachment. (veqryn)
 
 * Fixed bug where a stalemate battle with carriers that can be damaged and when damaged don't let planes land, were not letting defending planes move to land. (veqryn)
